...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Auth View Controller-->
        <scene sceneID="OEi-ik-6Rw">
            <objects>
                <viewController storyboardIdentifier="AuthViewController" id="WVL-AP-EgR" customClass="AuthViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Xco-wL-HpW">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_of_Unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="3pa-PO-KZS">
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
...
                                    <constraint firstAttribute="height" constant="60" id="14o-xX-lrS"/>
                                    <constraint firstAttribute="width" constant="60" id="H86-DT-yen"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JyB-Zd-8Bz">
                                <rect key="frame" x="16" y="714" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="AuthBtn"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="wcO-cX-vtS"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <backgroundConfiguration key="background" cornerRadius="16">
...
